syntax = "proto3";

option java_multiple_files = false;

option java_package = "com.yhs";

option java_outer_classname = "HelloProto";

/*
 IDL 文件目的 发布RPC服务
 */

message HelloRequest{
  string name = 1;
}

message HelloResponse{
  string result = 1;
}

message MutiHelloRequest{
  repeated string name = 1;
}

message MutiHelloResponse{
  string result = 1;
}

service HelloService{
  rpc hello(HelloRequest) returns (HelloResponse){}
  rpc mutiHello(MutiHelloRequest) returns (MutiHelloResponse){}
  rpc c2ss(HelloRequest) returns (stream HelloResponse){}
  rpc cs2s(stream HelloRequest) returns (HelloResponse){}
}